--- a/Lab_8_20130217_BuiThanhDam.ipynb
+++ b/Lab_8_20130217_BuiThanhDam.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "DoVWQ8AEyc-C"
       },
@@ -117,7 +117,8 @@
         "clf = GridSearchCV(svc, param_grid,scoring='accuracy',n_jobs=-1)\n",
         "clf.fit(Xtrain, ytrain)\n",
         "# y_pred = clf.predict(x_test)\n",
-        "print(clf.best_params_)\n",
+        "svmBestParam = clf.best_params_\n",
+        "print(svmBestParam)\n",
         "svmBestScore = clf.best_score_\n",
         "print(svmBestScore)\n"
       ],
@@ -126,9 +127,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9fb7c3e0-6e46-425e-e6b6-91291dca9945"
+        "outputId": "0d6cec60-06b7-4b9e-dfac-eb2ce3fc1c49"
       },
-      "execution_count": 25,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +173,8 @@
         "clf = GridSearchCV(knn, param_grid = grid_params,scoring='accuracy',n_jobs=-1,refit=True,cv=5)\n",
         "clf.fit(Xtrain, ytrain)\n",
         "\n",
-        "print(clf.best_params_)\n",
+        "knnBestParam = clf.best_params_\n",
+        "print(knnBestParam)\n",
         "knnBestScore = clf.best_score_\n",
         "print(knnBestScore)"
       ],
@@ -181,9 +183,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d11caa72-5830-42d8-e45e-15eecdb7e62e"
+        "outputId": "f96fc0f9-a0d2-4b4a-d2cf-354a218875ba"
       },
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +231,8 @@
         "clf = GridSearchCV(rfc, param_grid = param_grid,scoring='accuracy',n_jobs=-1,refit=True,cv=5)\n",
         "clf.fit(Xtrain, ytrain)\n",
         "\n",
-        "print(clf.best_params_)\n",
+        "rfBestParam = clf.best_params_\n",
+        "print(rfBestParam)\n",
         "rfBestScore = clf.best_score_\n",
         "print(rfBestScore)"
       ],
@@ -238,15 +241,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "832408f2-75de-4ace-a125-dc2c19af58f4"
+        "outputId": "73c83187-3d34-4ab4-e083-1dbe00148e32"
       },
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'max_depth': 3, 'max_features': 'sqrt', 'max_leaf_nodes': 6, 'n_estimators': 50}\n",
+            "{'max_depth': 3, 'max_features': 'log2', 'max_leaf_nodes': 6, 'n_estimators': 100}\n",
             "0.9666666666666668\n"
           ]
         }
@@ -266,7 +269,7 @@
       "source": [
         "t3 = PrettyTable(['Name Metric measure','SVM','Knn',\"Random forest\"])\n",
         "t3.add_row(['Best Score',svmBestScore,knnBestScore,rfBestScore])\n",
-        "\n",
+        "t3.add_row(['Best Parameters',svmBestParam,knnBestParam,rfBestParam])\n",
         "\n",
         "print(t3)"
       ],
@@ -275,19 +278,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bHfKDf5tBUHs",
-        "outputId": "aa8f7ce1-e85c-40d5-fbbe-2a779d2670ea"
+        "outputId": "95668769-d4c3-4305-dcdd-7aae885a888f"
       },
-      "execution_count": 24,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------------------+--------------------+--------------------+--------------------+\n",
-            "| Name Metric measure |        SVM         |        Knn         |   Random forest    |\n",
-            "+---------------------+--------------------+--------------------+--------------------+\n",
-            "|      Best Score     | 0.9800000000000001 | 0.9866666666666667 | 0.9666666666666668 |\n",
-            "+---------------------+--------------------+--------------------+--------------------+\n"
+            "+---------------------+------------------------------------------+-------------------------------------------------------------------+------------------------------------------------------------------------------------+\n",
+            "| Name Metric measure |                   SVM                    |                                Knn                                |                                   Random forest                                    |\n",
+            "+---------------------+------------------------------------------+-------------------------------------------------------------------+------------------------------------------------------------------------------------+\n",
+            "|      Best Score     |            0.9800000000000001            |                         0.9866666666666667                        |                                 0.9666666666666668                                 |\n",
+            "|   Best Parameters   | {'C': 1, 'gamma': 1, 'kernel': 'linear'} | {'metric': 'minkowski', 'n_neighbors': 11, 'weights': 'distance'} | {'max_depth': 3, 'max_features': 'log2', 'max_leaf_nodes': 6, 'n_estimators': 100} |\n",
+            "+---------------------+------------------------------------------+-------------------------------------------------------------------+------------------------------------------------------------------------------------+\n"
           ]
         }
       ]
