--- a/Lab_8_20130217_BuiThanhDam.ipynb
+++ b/Lab_8_20130217_BuiThanhDam.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 42,
       "metadata": {
         "id": "DoVWQ8AEyc-C"
       },
@@ -74,7 +74,7 @@
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.cluster import KMeans\n",
         "from sklearn.cluster import AgglomerativeClustering\n",
-        "\n",
+        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.model_selection import GridSearchCV\n",
         "from matplotlib import pyplot as plt\n",
         "from scipy.cluster.hierarchy import dendrogram, linkage\n",
@@ -269,7 +269,7 @@
       "source": [
         "t3 = PrettyTable(['Name Metric measure','SVM','Knn',\"Random forest\"])\n",
         "t3.add_row(['Best Score',svmBestScore,knnBestScore,rfBestScore])\n",
-        "t3.add_row(['Best Parameters',svmBestParam,knnBestParam,rfBestParam])\n",
+        "# t3.add_row(['Best Parameters',svmBestParam,knnBestParam,rfBestParam])\n",
         "\n",
         "print(t3)"
       ],
@@ -278,20 +278,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bHfKDf5tBUHs",
-        "outputId": "95668769-d4c3-4305-dcdd-7aae885a888f"
+        "outputId": "791f4838-e5b9-44d5-8ef6-a85eb0f7d03f"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------------------+------------------------------------------+-------------------------------------------------------------------+------------------------------------------------------------------------------------+\n",
-            "| Name Metric measure |                   SVM                    |                                Knn                                |                                   Random forest                                    |\n",
-            "+---------------------+------------------------------------------+-------------------------------------------------------------------+------------------------------------------------------------------------------------+\n",
-            "|      Best Score     |            0.9800000000000001            |                         0.9866666666666667                        |                                 0.9666666666666668                                 |\n",
-            "|   Best Parameters   | {'C': 1, 'gamma': 1, 'kernel': 'linear'} | {'metric': 'minkowski', 'n_neighbors': 11, 'weights': 'distance'} | {'max_depth': 3, 'max_features': 'log2', 'max_leaf_nodes': 6, 'n_estimators': 100} |\n",
-            "+---------------------+------------------------------------------+-------------------------------------------------------------------+------------------------------------------------------------------------------------+\n"
+            "+---------------------+--------------------+--------------------+--------------------+\n",
+            "| Name Metric measure |        SVM         |        Knn         |   Random forest    |\n",
+            "+---------------------+--------------------+--------------------+--------------------+\n",
+            "|      Best Score     | 0.9800000000000001 | 0.9866666666666667 | 0.9666666666666668 |\n",
+            "+---------------------+--------------------+--------------------+--------------------+\n"
           ]
         }
       ]
@@ -318,6 +317,21 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "cancer = datasets.load_breast_cancer(as_frame=True)\n",
+        "# cancer_df = cancer.frame\n",
+        "Xtrain = cancer['data']\n",
+        "ytrain = cancer['target']\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ev3EYw_Ji4hd"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "*   2.1. Apply **GridSearchCV** to **SVM** \n"
@@ -329,13 +343,40 @@
     {
       "cell_type": "code",
       "source": [
-        "# code\n"
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(Xtrain,ytrain, test_size = 0.3, random_state = 1)\n",
+        "#code\n",
+        "param_grid = {'kernel': ['rbf','linear']}\n",
+        "\n",
+        "\n",
+        "\n",
+        "svc = svm.SVC()\n",
+        "clf = GridSearchCV(svc, param_grid,scoring='accuracy',n_jobs=-1)\n",
+        "clf.fit(x_train, y_train)\n",
+        "# y_pred = clf.predict(x_test)\n",
+        "svmBestParam = clf.best_params_\n",
+        "print(svmBestParam)\n",
+        "svmBestScore = clf.best_score_\n",
+        "print(svmBestScore)\n"
       ],
       "metadata": {
-        "id": "-ZTSvsJdvYqI"
+        "id": "-ZTSvsJdvYqI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "faba6bcd-0996-4826-d846-b413fcf6306a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'kernel': 'linear'}\n",
+            "0.9523417721518987\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -349,13 +390,38 @@
     {
       "cell_type": "code",
       "source": [
-        "#code"
+        "#code\n",
+        "grid_params = { 'n_neighbors' : [5,7,9,11,13,15],\n",
+        "               'weights' : ['uniform','distance'],\n",
+        "               'metric' : ['minkowski','euclidean','manhattan']}\n",
+        "\n",
+        "knn = KNeighborsClassifier()\n",
+        "clf = GridSearchCV(knn, param_grid = grid_params,scoring='accuracy',n_jobs=-1,refit=True,cv=5)\n",
+        "clf.fit(x_train, y_train)\n",
+        "\n",
+        "knnBestParam = clf.best_params_\n",
+        "print(knnBestParam)\n",
+        "knnBestScore = clf.best_score_\n",
+        "print(knnBestScore)"
       ],
       "metadata": {
-        "id": "kt71yrAoBwYE"
+        "id": "kt71yrAoBwYE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7e563f4f-3459-47ee-e2c1-319fa119e3ad"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'metric': 'manhattan', 'n_neighbors': 9, 'weights': 'uniform'}\n",
+            "0.9296835443037974\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -369,13 +435,77 @@
     {
       "cell_type": "code",
       "source": [
-        "#code"
+        "#code\n",
+        "\n",
+        "logreg=LogisticRegression()\n",
+        "parameters = [{'penalty':['l1','l2']}, \n",
+        "              {'C':[1, 10, 100, 1000]}]\n",
+        "\n",
+        "clf = GridSearchCV(estimator = logreg,  \n",
+        "                           param_grid = parameters,\n",
+        "                           scoring = 'accuracy',\n",
+        "                           cv = 5,\n",
+        "                            refit=True,\n",
+        "                           n_jobs=-1)\n",
+        "clf.fit(x_train, y_train)\n",
+        "\n",
+        "lrBestParam = clf.best_params_\n",
+        "print(lrBestParam)\n",
+        "lrBestScore = clf.best_score_\n",
+        "print(lrBestScore)"
       ],
       "metadata": {
-        "id": "nyYjpHFbB1Ci"
+        "id": "nyYjpHFbB1Ci",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c97fca5-4cd5-45c1-a325-1e9d86f31dcc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'C': 100}\n",
+            "0.9373417721518986\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.9/dist-packages/sklearn/model_selection/_validation.py:378: FitFailedWarning: \n",
+            "5 fits failed out of a total of 30.\n",
+            "The score on these train-test partitions for these parameters will be set to nan.\n",
+            "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+            "\n",
+            "Below are more details about the failures:\n",
+            "--------------------------------------------------------------------------------\n",
+            "5 fits failed with the following error:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.9/dist-packages/sklearn/model_selection/_validation.py\", line 686, in _fit_and_score\n",
+            "    estimator.fit(X_train, y_train, **fit_params)\n",
+            "  File \"/usr/local/lib/python3.9/dist-packages/sklearn/linear_model/_logistic.py\", line 1162, in fit\n",
+            "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+            "  File \"/usr/local/lib/python3.9/dist-packages/sklearn/linear_model/_logistic.py\", line 54, in _check_solver\n",
+            "    raise ValueError(\n",
+            "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got l1 penalty.\n",
+            "\n",
+            "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+            "/usr/local/lib/python3.9/dist-packages/sklearn/model_selection/_search.py:952: UserWarning: One or more of the test scores are non-finite: [       nan 0.92981013 0.92981013 0.92984177 0.93734177 0.92981013]\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.9/dist-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -389,13 +519,41 @@
     {
       "cell_type": "code",
       "source": [
-        "#code"
+        "#code\n",
+        "param_grid = {\n",
+        "    'n_estimators': [25, 50, 100, 150],\n",
+        "    'max_features': ['sqrt', 'log2', None],\n",
+        "    'max_depth': [3, 6, 9],\n",
+        "    'max_leaf_nodes': [3, 6, 9],\n",
+        "}\n",
+        "\n",
+        "rfc=RandomForestClassifier()\n",
+        "clf = GridSearchCV(rfc, param_grid = param_grid,scoring='accuracy',n_jobs=-1,refit=True,cv=5)\n",
+        "clf.fit(x_train, y_train)\n",
+        "\n",
+        "rfBestParam = clf.best_params_\n",
+        "print(rfBestParam)\n",
+        "rfBestScore = clf.best_score_\n",
+        "print(rfBestScore)"
       ],
       "metadata": {
-        "id": "nktGtM0PB7XB"
+        "id": "nktGtM0PB7XB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "272aa1c6-29c8-4a43-d647-073ee304f71b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'max_depth': 9, 'max_features': 'log2', 'max_leaf_nodes': 9, 'n_estimators': 25}\n",
+            "0.9623734177215189\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -409,13 +567,34 @@
     {
       "cell_type": "code",
       "source": [
-        "#code"
+        "#code\n",
+        "t = PrettyTable(['Name Metric measure','SVM','Knn',\"Random forest\",'Logistic Regression'])\n",
+        "t.add_row(['Best Score',svmBestScore,knnBestScore,rfBestScore,lrBestScore])\n",
+        "# t3.add_row(['Best Parameters',svmBestParam,knnBestParam,rfBestParam])\n",
+        "\n",
+        "print(t)"
       ],
       "metadata": {
-        "id": "8LS_IYfNCFEj"
+        "id": "8LS_IYfNCFEj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b96d8f84-cd1f-4a05-fce7-aa854a8d8f78"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------------+--------------------+--------------------+--------------------+---------------------+\n",
+            "| Name Metric measure |        SVM         |        Knn         |   Random forest    | Logistic Regression |\n",
+            "+---------------------+--------------------+--------------------+--------------------+---------------------+\n",
+            "|      Best Score     | 0.9523417721518987 | 0.9296835443037974 | 0.9623734177215189 |  0.9373417721518986 |\n",
+            "+---------------------+--------------------+--------------------+--------------------+---------------------+\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
