--- a/Lab_9_20130217_BuiThanhDam.ipynb
+++ b/Lab_9_20130217_BuiThanhDam.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "id": "DoVWQ8AEyc-C"
       },
@@ -120,7 +120,7 @@
         },
         "outputId": "39fce1be-37c5-4466-83c7-f6b8738ebbc3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +149,7 @@
         "id": "8dntFN9YozO-",
         "outputId": "f631a4dd-d5ee-4f12-9499-1d2adbb8445d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +195,7 @@
       "metadata": {
         "id": "sOsg77IBzEyo"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
         "id": "TvWQt6l8pL8m",
         "outputId": "e6d42f1a-fbc8-49dd-9eca-899c1bfd6119"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
         },
         "outputId": "b7a552a9-4e99-4bf4-f15f-b71bf01cdcbb"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +336,7 @@
         },
         "outputId": "0b2fc6ef-0f2e-448a-e139-679473769497"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +364,7 @@
       "metadata": {
         "id": "Db-td8LasuR-"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
       "metadata": {
         "id": "5ZE7A0Au1Pg0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,7 +442,7 @@
         "id": "348jMQoss4ad",
         "outputId": "b54b00e2-69cf-465f-f7bb-4c0f2f533453"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,13 +481,97 @@
     {
       "cell_type": "code",
       "source": [
-        "#code"
+        "#code\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')\n",
+        "%cd '/content/gdrive/MyDrive/ColabNotebooks'\n",
+        "dataset=pd.read_csv(\"spambase.data\", header=None)\n",
+        "\n",
+        "X, ytrain = dataset.iloc[:, :57].values, dataset.iloc[:, 57].values\n",
+        "\n",
+        "# Scale the features, as the original values have wide ranges\n",
+        "Xtrain = StandardScaler().fit_transform(X)\n",
+        "x_train, x_test, y_train, y_test = train_test_split(Xtrain,ytrain, test_size = 0.3, random_state = 1)\n",
+        "print(Xtrain)\n",
+        "print(ytrain)"
       ],
       "metadata": {
-        "id": "m-mbZEK0QZTv"
+        "id": "m-mbZEK0QZTv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "252b8b5a-94b7-4704-86a6-28ac73fcf351"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
+            "/content/gdrive/MyDrive/ColabNotebooks\n",
+            "[[-3.42433707e-01  3.30884903e-01  7.12858774e-01 ... -4.52472762e-02\n",
+            "   4.52979198e-02 -8.72413388e-03]\n",
+            " [ 3.45359395e-01  5.19091945e-02  4.35129540e-01 ... -2.44326749e-03\n",
+            "   2.50562832e-01  1.22832407e+00]\n",
+            " [-1.45921392e-01 -1.65071912e-01  8.51723390e-01 ...  1.45920848e-01\n",
+            "   2.22110599e+00  3.25873251e+00]\n",
+            " ...\n",
+            " [ 6.40127868e-01 -1.65071912e-01  3.83734930e-02 ... -1.19382054e-01\n",
+            "  -2.36941335e-01 -2.72627750e-01]\n",
+            " [ 2.80176333e+00 -1.65071912e-01 -5.56760578e-01 ... -1.27482666e-01\n",
+            "  -2.42072958e-01 -3.38603654e-01]\n",
+            " [-3.42433707e-01 -1.65071912e-01  7.32696576e-01 ... -1.24236117e-01\n",
+            "  -2.42072958e-01 -4.01280763e-01]]\n",
+            "[1 1 1 ... 0 0 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mlp = MLPClassifier(max_iter=100)\n",
+        "parameter_space = {\n",
+        "    'hidden_layer_sizes': [(100,50), (250,100)],\n",
+        "    'solver': ['sgd', 'adam'],\n",
+        "    'alpha': [0.0001, 0.05],\n",
+        "    'learning_rate': ['constant','adaptive'],\n",
+        "}\n",
+        "\n",
+        "clf = GridSearchCV(mlp, parameter_space, n_jobs=-1, cv=3)\n",
+        "clf.fit(x_train, y_train)\n",
+        "print('Best parameters found:\\n', clf.best_params_)\n",
+        "print('Best score found:\\n', clf.best_score_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tlAHC-jvD07n",
+        "outputId": "80b24734-e7c5-404c-d765-9c10f8c2a7c9"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best parameters found:\n",
+            " {'alpha': 0.0001, 'hidden_layer_sizes': (250, 100), 'learning_rate': 'adaptive', 'solver': 'adam'}\n",
+            "Best score found:\n",
+            " 0.9341607066515563\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.9/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:686: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -501,13 +585,95 @@
     {
       "cell_type": "code",
       "source": [
-        "#code"
+        "#MultilayerPerceptron\n",
+        "y_predMlp = clf.predict(x_test)\n",
+        "\n",
+        "accMlp =  accuracy_score(y_test, y_predMlp)\n",
+        "preMlp= metrics.precision_score(y_test, y_predMlp,average='macro')\n",
+        "\n",
+        "recallMlp= metrics.recall_score(y_test, y_predMlp,average='macro')\n",
+        "f1Mlp = metrics.f1_score(y_test, y_predMlp,average='macro') \n",
+        "\n",
+        "\n",
+        "#Knn \n",
+        "grid_params = { 'n_neighbors' : [5,7,9,12],\n",
+        "               'weights' : ['uniform','distance'],\n",
+        "               'metric' : ['minkowski','euclidean']}\n",
+        "\n",
+        "knn = KNeighborsClassifier()\n",
+        "clfKnn = GridSearchCV(knn, param_grid = grid_params,n_jobs=-1,refit=True,cv=5)\n",
+        "clfKnn.fit(x_train, y_train)\n",
+        "y_predKnn = clfKnn.predict(x_test)\n",
+        "\n",
+        "accKnn =  accuracy_score(y_test, y_predKnn)\n",
+        "preKnn= metrics.precision_score(y_test, y_predKnn,average='macro')\n",
+        "\n",
+        "recallKnn= metrics.recall_score(y_test, y_predKnn,average='macro')\n",
+        "f1Knn = metrics.f1_score(y_test, y_predKnn,average='macro') \n",
+        "\n",
+        "#Random forest\n",
+        "param_grid = {\n",
+        "    'n_estimators': [25, 50, 100],\n",
+        "    'max_features': ['sqrt', 'log2'],\n",
+        "    'max_depth': [3, 6],\n",
+        "    'max_leaf_nodes': [3, 6],\n",
+        "}\n",
+        "\n",
+        "rfc=RandomForestClassifier()\n",
+        "clfRf = GridSearchCV(rfc, param_grid = param_grid,n_jobs=-1,refit=True,cv=5)\n",
+        "clfRf.fit(x_train, y_train)\n",
+        "\n",
+        "y_predRf = clfRf.predict(x_test)\n",
+        "\n",
+        "accRf =  accuracy_score(y_test, y_predRf)\n",
+        "preRf= metrics.precision_score(y_test, y_predRf,average='macro')\n",
+        "\n",
+        "recallRf= metrics.recall_score(y_test, y_predRf,average='macro')\n",
+        "f1Rf = metrics.f1_score(y_test, y_predRf,average='macro') \n",
+        "\n",
+        "# Naive bayes không sử dụng được gridsearchcv ạ nên em không dùng nó\n"
       ],
       "metadata": {
         "id": "pBU6vVH_QakV"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t3 = PrettyTable(['Name Metric measure','MultilayerPerceptron','Random Forest',\"Knn\"])\n",
+        "t3.add_row(['Accuracy',accMlp,accRf,accKnn])\n",
+        "t3.add_row(['Precision Score',preMlp,preRf,preKnn])\n",
+        "t3.add_row(['Recall Score',recallMlp,recallRf,recallKnn])\n",
+        "t3.add_row(['F1',f1Mlp,f1Rf,f1Knn])\n",
+        "\n",
+        "print(t3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0l2tk18fGZkv",
+        "outputId": "3d757374-9960-4790-ffc4-fab2588fe7f3"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------------+----------------------+--------------------+--------------------+\n",
+            "| Name Metric measure | MultilayerPerceptron |   Random Forest    |        Knn         |\n",
+            "+---------------------+----------------------+--------------------+--------------------+\n",
+            "|       Accuracy      |  0.942070963070239   | 0.9094858797972484 | 0.9268645908761767 |\n",
+            "|   Precision Score   |  0.9408393726242494  | 0.9213265136591271 | 0.9277748238135577 |\n",
+            "|     Recall Score    |  0.9371933764918308  | 0.8908871713568502 | 0.9180803276522658 |\n",
+            "|          F1         |  0.9389340655939226  | 0.901815244871784  | 0.922378469584632  |\n",
+            "+---------------------+----------------------+--------------------+--------------------+\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
